Updated configuration service